[gd_scene load_steps=21 format=3 uid="uid://rdrleinbk66r"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ybpai"]
[ext_resource type="Material" uid="uid://bfc257eau1ouq" path="res://Materials/Player_mat.tres" id="2_qio0w"]
[ext_resource type="PackedScene" uid="uid://j4ykwt0h6c4r" path="res://3d_models/Pistol.blend" id="2_rnvw1"]
[ext_resource type="Script" path="res://Scripts/Holder.gd" id="2_xw32p"]
[ext_resource type="Texture2D" uid="uid://e4pjkdypimg1" path="res://addons/kenney_particle_pack/star_06.png" id="3_wwdcx"]
[ext_resource type="Script" path="res://Scripts/InteractRay.gd" id="5_dakr0"]
[ext_resource type="Texture2D" uid="uid://cpwfe3eyodium" path="res://Sprites/pixel faces_sheet.png.png" id="5_nhbnr"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5oit5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_opbun"]

[sub_resource type="Gradient" id="Gradient_wugay"]
offsets = PackedFloat32Array(0, 0.178862, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vs73v"]
gradient = SubResource("Gradient_wugay")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_x22x6"]
gravity = Vector3(0, 0, 0)
angle_min = 45.0
angle_max = 45.0
color_ramp = SubResource("GradientTexture1D_vs73v")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_06icu"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.988235, 0.690196, 1)
albedo_texture = ExtResource("3_wwdcx")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_5ssmd"]
material = SubResource("StandardMaterial3D_06icu")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="Animation" id="Animation_dccir"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_4we2q"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.5, -0.276847, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.175598, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ugra3"]
resource_name = "move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.4765, -0.22086, -0.5), Vector3(0.5, -0.25, -0.5), Vector3(0.521588, -0.208488, -0.5)]
}

[sub_resource type="Animation" id="Animation_vgarj"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.5, -0.18962, -0.5), Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.512673, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jqqel"]
_data = {
"RESET": SubResource("Animation_dccir"),
"idle": SubResource("Animation_4we2q"),
"move": SubResource("Animation_ugra3"),
"shoot": SubResource("Animation_vgarj")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_y4vht"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath("FaceSprite:frame")
properties/3/spawn = true
properties/3/sync = false

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
collision_layer = 2
script = ExtResource("1_ybpai")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)
mesh = SubResource("CapsuleMesh_5oit5")
surface_material_override/0 = ExtResource("2_qio0w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)
shape = SubResource("CapsuleShape3D_opbun")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.243105, 0)

[node name="Holder" type="Area3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.121156, -0.109819, -0.165641)
script = ExtResource("2_xw32p")

[node name="Pistol" parent="Camera3D" instance=ExtResource("2_rnvw1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.25, -0.5)
visible = false

[node name="MuzzleFlash" type="GPUParticles3D" parent="Camera3D/Pistol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0637187, -0.291506)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_x22x6")
draw_pass_1 = SubResource("PlaneMesh_5ssmd")

[node name="GunRayCast3D" type="RayCast3D" parent="Camera3D"]
visible = false
enabled = false
target_position = Vector3(0, 0, -4)
collision_mask = 2

[node name="InteractRayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -1)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("5_dakr0")

[node name="FaceSprite" type="Sprite3D" parent="."]
transform = Transform3D(-0.2, 0, -1.74846e-08, 0, 0.2, 0, 1.74846e-08, 0, -0.2, 0, 0.185902, -0.205587)
double_sided = false
texture = ExtResource("5_nhbnr")
hframes = 4
vframes = 3
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_default_blend_time = 0.05
libraries = {
"": SubResource("AnimationLibrary_jqqel")
}

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_y4vht")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
